--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.1'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.firebase:firebase-messaging:22.0.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -53,12 +53,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+//    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.firebaseui:firebase-ui-database:6.2.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.hbb20:ccp:2.3.1'
@@ -78,6 +78,9 @@ android {
 }
 
 dependencies {
+
+
+    implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'  //with androidx libraries
     //implementation 'com.android.support:multidex:1.0.3'  //with support libraries
 
